--- a/index.html
+++ b/index.html
@@ -10,49 +10,50 @@
 
 <body>
 
-  <div class="container">
-    <div class="fixed-top">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Bootstrap</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Головна</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Меню
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="пошук" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Пошук</button>
-            </form>
+  <div class="container-fluid text-center content">
+    <header class="roe header">
+      <div class="col-12 navigation">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Bootstrap</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Головна</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Меню
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="пошук" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Пошук</button>
+              </form>
+            </div>
           </div>
-        </div>
-      </nav>
-    </div>
-  
-          <div class="container text-lef">
-            <div class="row"> 
-              <div class="col-12 col-md-4 col-lg-3">
+        </nav>
+      </div>
+    </header>
+
+          <main class="row main">
+            <div class="row-12 col-sm-12 col-md-6 col-lg-3 col-xl-3"> 
                 <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -75,10 +76,8 @@
                   </button>
               </div>
             </div>
-            </div>
   
-
-              <div class="col-12 col-md-8 col-lg-6 d-lg-6 d-lg-block">
+              <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header">
@@ -113,39 +112,35 @@
                 </div>
               </div>
   
-  
-              <div class="container text-right">
-                <div class="mb-3">
-                  <label for="formFile" class="form-label">Default file input example</label>
-                  <input class="form-control" type="file" id="formFile">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3">
+                  <div class="mb-3">
+                    <label for="formFile" class="form-label">Default file input example</label>
+                    <input class="form-control" type="file" id="formFile">
+                  </div>
+                  <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Multiple files input example</label>
+                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                  </div>
+                  <div class="mb-3">
+                    <label for="formFileDisabled" class="form-label">Disabled file input example</label>
+                    <input class="form-control" type="file" id="formFileDisabled" disabled>
+                  </div>
+                  <div class="mb-3">
+                    <label for="formFileSm" class="form-label">Small file input example</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                  </div>
+                  <div>
+                    <label for="formFileLg" class="form-label">Large file input example</label>
+                    <input class="form-control form-control-lg" id="formFileLg" type="file">
+                  </div>
                 </div>
-                <div class="mb-3">
-                  <label for="formFileMultiple" class="form-label">Multiple files input example</label>
-                  <input class="form-control" type="file" id="formFileMultiple" multiple>
-                </div>
-                <div class="mb-3">
-                  <label for="formFileDisabled" class="form-label">Disabled file input example</label>
-                  <input class="form-control" type="file" id="formFileDisabled" disabled>
-                </div>
-                <div class="mb-3">
-                  <label for="formFileSm" class="form-label">Small file input example</label>
-                  <input class="form-control form-control-sm" id="formFileSm" type="file">
-                </div>
-                <div>
-                  <label for="formFileLg" class="form-label">Large file input example</label>
-                  <input class="form-control form-control-lg" id="formFileLg" type="file">
-                </div>
-              </div>
+            </main>
+
+              <footer class="col-12 footer"> 
+              <h6 class="footer_year"><strong>$Footer 2024</strong></h6>
+              </footer>
   </div>
-
-
-
-    <div class="footer"> 
-      <div class="text-center">Footer 2024</div>
-    </div>
     
-
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     
